# AION

./: .gitattributes  .gitignore  DemoAION.ipynb  README.md  pyproject.toml  test_notebook.ipynb
.github/workflows/: build.yaml  publish-pypi.yml  test.yaml
aion/: __init__.py  modalities.py  model.py  tokenizers.py  utils.py
aion/codecs/: __init__.py  catalog.py  config.py  image.py  manager.py  scalar.py  scalar_field.py  spectrum.py  utils.py
aion/codecs/preprocessing/: band_to_index.py  image.py
aion/codecs/quantizers/: __init__.py  lookup_free_quantization.py  scalar.py
aion/codecs/tokenizers/: __init__.py  base.py  image.py  scalar.py  spectrum.py
aion/fourm/: decoder_embeddings.py  fm.py  generate.py  modality_info.py  modality_transforms.py
aion/modules/: subsampler.py
aion/quantizers/: __init__.py
aion/tokenizers/: __init__.py  base.py  image.py
docs/: api.md  api.rst  architecture.md  index.md  installation.md  usage.md
notebooks/: StellarPropTutorial.ipynb  StellarTutorial.ipynb  Tutorial.ipynb
scripts/: export_gaia_codecs.py  export_hsc_codecs.py
tests/codecs/: test_catalog_codec.py  test_codec_manager.py  test_image_codec.py  test_scalar_codec.py  test_scalar_field_codec.py  test_spectrum_codec.py
tests/test_data/: image_codec_decoded_batch.pt  image_codec_encoded_batch.pt  image_codec_input_batch.pt  scalar-field_codec_decoded_batch.pt  scalar-field_codec_encoded_batch.pt  scalar-field_codec_input_batch.pt
tests/tokenizers/: test_catalog_tokenizer.py  test_image_tokenizer.py  test_scalar_field_tokenizer.py  test_scalar_tokenizer.py  test_spectrum_tokenizer.py
