[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aion"
version = "0.0.1"
description = "AstronomIcal Omnimodal Network"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.7.0",
    "huggingface_hub[torch]>=0.24.7",
    "jaxtyping>=0.2.28",
    "numpy",
    "tokenizers>=0.15.2",
    "torch>=2.4.0",
    "pydantic>=2.10.6",
    "vector_quantize_pytorch==1.14.30",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "ruff",
]

[tool.ruff.lint]
# Ignore space in shape notation for jaxtyping
# See https://docs.kidger.site/jaxtyping/faq/#flake8-or-ruff-are-throwing-an-error
ignore = ["F722"]

[tool.setuptools.packages.find]
include = ["aion*"]
# Only include the 'aion' package and its subpackages
